name:                fay
version:             0.18.1.3
synopsis:            A compiler for Fay, a Haskell subset that compiles to JavaScript.
description:         Fay is a proper subset of Haskell which is type-checked
                     with GHC, and compiled to JavaScript. It is lazy, pure, has a Fay monad,
                     an FFI, tail-recursion optimization (experimental), and support for cabal packages.
                     .
                     /Documentation/
                     .
                     See <http://fay-lang.org/>
                     .
                     /Examples/
                     .
                     See the examples directory and <https://github.com/faylang/fay/wiki#fay-in-the-wild>
                     .
                     /Release Notes/
                     .
                     See <https://github.com/faylang/fay/blob/master/CHANGELOG.md>
                     .
                     See full history at: <https://github.com/faylang/fay/commits>
homepage:            http://fay-lang.org/
bug-reports:         https://github.com/faylang/fay/issues
license:             BSD3
license-file:        LICENSE
author:              Chris Done, Adam Bergmark
maintainer:          adam@bergmark.nl
copyright:           2012 Chris Done, Adam Bergmark
category:            Development, Web, Fay
build-type:          Custom
cabal-version:       >=1.8
data-files:          js/runtime.js
                     src/Fay/FFI.hs
extra-source-files:
  LICENSE
  README.md
  CHANGELOG.md
  -- Examples
  examples/*.hs
  examples/*.html
  examples/*.png
  -- Test cases
  tests/*.hs
  tests/*.res
  tests/Compile/*.hs
  tests/Compile/*.res
  tests/FromString/*.hs
  tests/FromString/*.res
  tests/Hierarchical/*.hs
  tests/Hierarchical/*.res
  tests/ImportList1/*.hs
  tests/ImportList1/*.res
  tests/ImportType2I/*.hs
  tests/ImportType2I/*.res
  tests/Issue215/*.hs
  tests/Issue215/*.res
  tests/ModuleReExport/*.hs
  tests/ModuleReExport/*.res
  tests/ModuleRecordClash/*.hs
  tests/ModuleRecordClash/*.res
  tests/NestedImporting/*.hs
  tests/NestedImporting/*.res
  tests/NestedImporting2/*.hs
  tests/NestedImporting2/*.res
  tests/QualifiedImport/*.hs
  tests/QualifiedImport/*.res
  tests/ReExportGlobally/*.hs
  tests/ReExportGlobally/*.res

source-repository head
  type: git
  location: https://github.com/faylang/fay.git

library
  hs-source-dirs:    src
  exposed-modules:     Fay
                     , Fay.Compiler
                     , Fay.Compiler.Config
                     , Fay.Control.Monad.Extra
                     , Fay.Control.Monad.IO
                     , Fay.Convert
                     , Fay.Data.List.Extra
                     , Fay.Exts
                     , Fay.Exts.Scoped
                     , Fay.Exts.NoAnnotation
                     , Fay.FFI
                     , Fay.System.Directory.Extra
                     , Fay.System.Process.Extra
                     , Fay.Types
  other-modules:       Fay.Compiler.Decl
                     , Fay.Compiler.Defaults
                     , Fay.Compiler.Desugar
                     , Fay.Compiler.Exp
                     , Fay.Compiler.FFI
                     , Fay.Compiler.GADT
                     , Fay.Compiler.Import
                     , Fay.Compiler.InitialPass
                     , Fay.Compiler.Misc
                     , Fay.Compiler.Optimizer
                     , Fay.Compiler.Packages
                     , Fay.Compiler.Pattern
                     , Fay.Compiler.PrimOp
                     , Fay.Compiler.Print
                     , Fay.Compiler.QName
                     , Fay.Compiler.State
                     , Fay.Compiler.Typecheck
                     , Paths_fay
  ghc-options:       -O2 -Wall -fno-warn-name-shadowing
  build-depends:     base                 >= 4       && < 5
                   , Cabal                              < 1.19
                   , aeson                              < 0.7
                   , attoparsec                         < 0.11
                   , bytestring                         < 0.11
                   , containers                         < 0.6
                   , cpphs                              < 1.19
                   , data-default                       < 0.6
                   , directory                          < 1.3
                   , filepath                           < 1.4
                   , ghc-paths                          < 0.2
                   , haskell-names        >= 0.3.1   && < 0.4
                   , haskell-packages     >= 0.2.3.1 && < 0.3
                   , haskell-src-exts     >= 1.14    && < 1.15
                   , language-ecmascript  >= 0.15    && < 1.0
                   , mtl                                < 2.2
                   , pretty-show          >= 1.6     && < 1.7
                   , process                            < 1.2
                   , safe                               < 0.4
                   , split                              < 0.3
                   , syb                                < 0.5
                   , text                               < 1.1
                   , time                               < 1.5
                   , uniplate             >= 1.6.11  && < 1.7
                   , unordered-containers               < 0.3
                   , utf8-string                        < 0.4
                   , vector                             < 0.11
                   , sourcemap                          < 0.2

executable fay
  hs-source-dirs:    src/main
  ghc-options:       -O2 -Wall
  ghc-prof-options:  -fprof-auto
  main-is:           Main.hs
  build-depends:     base
                   , fay
                   , data-default
                   , optparse-applicative >= 0.6     && < 0.8
                   , split

executable fay-tests
  hs-source-dirs:    src/tests
  ghc-options:       -O2 -Wall -threaded -with-rtsopts=-N
  ghc-prof-options:  -fprof-auto
  main-is:           Tests.hs
  other-modules:     Test.CommandLine
                     Test.Compile
                     Test.Convert
                     Test.Util
  build-depends:     base
                   , fay
                   , HUnit                              < 1.3
                   , aeson
                   , attoparsec
                   , bytestring
                   , data-default
                   , directory
                   , filepath
                   , haskell-src-exts
                   , test-framework                     < 0.9
                   , test-framework-hunit               < 0.4
                   , test-framework-th                  < 0.3
                   , text
                   , utf8-string
