name:                fay
version:             0.20.0.1
synopsis:            A compiler for Fay, a Haskell subset that compiles to JavaScript.
description:         Fay is a proper subset of Haskell which is type-checked
                     with GHC, and compiled to JavaScript. It is lazy, pure, has a Fay monad,
                     an FFI, tail-recursion optimization (experimental), and support for cabal packages.
                     .
                     /Documentation/
                     .
                     See <http://fay-lang.org/>
                     .
                     /Examples/
                     .
                     See the examples directory and <https://github.com/faylang/fay/wiki#fay-in-the-wild>
                     .
homepage:            http://fay-lang.org/
bug-reports:         https://github.com/faylang/fay/issues
license:             BSD3
license-file:        LICENSE
author:              Chris Done, Adam Bergmark
maintainer:          adam@bergmark.nl
copyright:           2012 Chris Done, Adam Bergmark
category:            Development, Web, Fay
build-type:          Custom
cabal-version:       >=1.8
data-files:
  js/runtime.js
  src/Fay/FFI.hs
extra-source-files:
  CHANGELOG.md
  LICENSE
  README.md
  -- Examples
  examples/*.hs
  examples/*.html
  examples/*.png
  -- Test cases
  tests/*.hs
  tests/*.res
  tests/Compile/*.hs
  tests/Compile/*.res
  tests/FromString/*.hs
  tests/FromString/*.res
  tests/Hierarchical/*.hs
  tests/Hierarchical/*.res
  tests/ImportList1/*.hs
  tests/ImportList1/*.res
  tests/ImportType2I/*.hs
  tests/ImportType2I/*.res
  tests/Issue215/*.hs
  tests/Issue215/*.res
  tests/ModuleReExport/*.hs
  tests/ModuleReExport/*.res
  tests/ModuleRecordClash/*.hs
  tests/ModuleRecordClash/*.res
  tests/NestedImporting/*.hs
  tests/NestedImporting/*.res
  tests/NestedImporting2/*.hs
  tests/NestedImporting2/*.res
  tests/QualifiedImport/*.hs
  tests/QualifiedImport/*.res
  tests/ReExportGlobally/*.hs
  tests/ReExportGlobally/*.res

source-repository head
  type: git
  location: https://github.com/faylang/fay.git

library
  ghc-options:       -O2 -Wall
  hs-source-dirs:    src
  exposed-modules:
    Fay
    Fay.Compiler
    Fay.Compiler.Desugar
    Fay.Compiler.Parse
    Fay.Compiler.Prelude
    Fay.Config
    Fay.Convert
    Fay.FFI
    Fay.Types
    Fay.Types.CompileError
    Fay.Types.CompileResult
  other-modules:
    Fay.Compiler.Decl
    Fay.Compiler.Defaults
    Fay.Compiler.Desugar.Name
    Fay.Compiler.Desugar.Types
    Fay.Compiler.Exp
    Fay.Compiler.FFI
    Fay.Compiler.GADT
    Fay.Compiler.Import
    Fay.Compiler.InitialPass
    Fay.Compiler.Misc
    Fay.Compiler.Optimizer
    Fay.Compiler.Packages
    Fay.Compiler.Pattern
    Fay.Compiler.PrimOp
    Fay.Compiler.Print
    Fay.Compiler.QName
    Fay.Compiler.State
    Fay.Compiler.Typecheck
    Fay.Exts
    Fay.Exts.NoAnnotation
    Fay.Exts.Scoped
    Fay.Types.FFI
    Fay.Types.Js
    Fay.Types.ModulePath
    Paths_fay
  build-depends:
      base >= 4 && < 4.8
    , aeson < 0.8
    , bytestring < 0.11
    , containers < 0.6
    , data-default < 0.6
    , directory < 1.3
    , filepath < 1.4
    , ghc-paths < 0.2
    , haskell-names >= 0.3.1 && < 0.4
    , haskell-packages == 0.2.3.1 || > 0.2.3.2 && < 0.3
    , haskell-src-exts >= 1.15.0.1 && < 1.16
    , language-ecmascript >= 0.15 && < 0.17
    , mtl < 2.2
    , process < 1.3
    , safe < 0.4
    , sourcemap < 0.2
    , split < 0.3
    , spoon < 0.4
    , syb < 0.5
    , text < 1.2
    , transformers >= 0.3 && < 0.4 || > 0.4.1 && < 0.5
    , uniplate >= 1.6.11 && < 1.7
    , unordered-containers < 0.3
    , utf8-string < 0.4
    , vector < 0.11

executable fay
  hs-source-dirs:    src/main
  ghc-options:       -O2 -Wall
  ghc-prof-options:  -fprof-auto
  main-is:           Main.hs
  build-depends:
      base
    , fay
    , optparse-applicative >= 0.6 && < 0.9
    , split

executable fay-tests
  ghc-options:       -O2 -Wall -threaded -with-rtsopts=-N
  ghc-prof-options:  -fprof-auto
  hs-source-dirs:    src/tests
  main-is:           Tests.hs
  other-modules:
    Test.CommandLine
    Test.Compile
    Test.Convert
    Test.Desugar
    Test.Util
  build-depends:
      base
    , aeson
    , attoparsec
    , bytestring
    , directory
    , fay
    , filepath
    , groom == 0.1.*
    , haskell-src-exts
    , tasty == 0.8.*
    , tasty-hunit == 0.8.*
    , tasty-th == 0.1.*
    , text
    , utf8-string
